testsuite/poke.pkl/sub-f32-diag-1.pk
/* { dg-do compile } */

var res
  = 1t .- 1; /* { dg-error "invalid operand .*" } */
